# acaworkshop.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  accepted-papers.html  accepted-papers.qmd  cfp.html  cfp.qmd  index.html  index.qmd  index.quarto_ipynb  listings.json  pyproject.toml  refs.bib  requirements.txt  robots.txt  schedule.html  schedule.qmd  search.json  sitemap.xml  speakers.qmd  styles.css  team.html  team.ipynb  team.qmd  team.quarto_ipynb  utils.py
.github/workflows/: deploy.yml
data/: oral-presentations.yml  organisers.yml  panel.yml  papers.yml  reviewers.csv  reviewers.yml  satellite.yml  schedule.yml  student.yml
site_libs/bootstrap/: bootstrap-0b913b9e0cca1d34f3ae9cf47dda94df.min.css  bootstrap-0feea875b5ca87f24cfa5723aee7f97c.min.css  bootstrap-21810d499dc1d0cd6ca90db5f0cce796.min.css  bootstrap-3de6b47e82947e5270ed6420cf1ff173.min.css  bootstrap-4c2bff8e93687e6b3c3b846a6d34db3b.min.css  bootstrap-d4b630284e24a1fd430720db227878af.min.css  bootstrap-d79447910536720f43e6241a1833c11c.min.css  bootstrap-e8879ba14180f11dafe15efa4341f01e.min.css
speakers/: index.html  index.qmd  speaker-listing-temp.ejs  speaker-listing-with-talks.ejs  speaker-listing.ejs  speakers.css
speakers/Lilly Irani/: index.html  index.qmd
speakers/alex hanna/: index.html  index.qmd
speakers/bogdan kulynych/: index.html  index.qmd
speakers/florian tramer/: index.html  index.qmd
speakers/helen nissenbaum/: index.html  index.qmd
speakers/joana redden/: index.html  (+1 more)
templates/: oral.ejs  organisers.ejs  papers.ejs  reviewers.ejs  schedule.ejs
(+6 files in other folders)
